PyMaker/datas/object2/RawHTML/i9401/Python_DOC_referPages.python-development-environment-install-python-3-5-2-pip-and-virtualenv-on-w.txt
<div class="post-text" itemprop="text">
<p><strong>I'm having a problem trying to get the PowerShell virtualenvwrapper installed.</strong></p>
<p>Bellow is the process I'm going through:</p>
<p>/******</p>
<p>Experienced Python/Django developers often choose to instead run their Python apps within independent Python virtual environments.</p>
<p>These allow developers to have multiple different Django environments on a single computer, allowing them to create new websites (using the latest version of Django)while still maintaining websites that rely on older versions.</p>
<p>The Django developer team itself recommends that you use Python virtual environments.</p>
<p>******/</p>
<p><strong>1.</strong> Access PowerShell as admin</p>
<blockquote>
<p>cd C:\</p>
<p>mkdir Django</p>
<p>cd Django</p>
</blockquote>
<p><strong>2.</strong> Get Python 3.5.2 (32 bits is the one I suggest) - <a href="https://www.python.org/downloads/release/python-352/" rel="nofollow noreferrer">https://www.python.org/downloads/release/python-352/</a></p>
<blockquote>
<p>Customize the location: C:\Python35-32</p>
<p>(make sure is installed in your path)</p>
</blockquote>
<p>Once you’ve installed Python,
open up a PowerShell window and</p>
<blockquote>
<p>python</p>
</blockquote>
<p>This is what you will see:</p>
<pre><code> Python 3.5.2 (v3.5.2:4def2a2901a5, Jun 25 2016, 22:01:18) [MSC v.1900 32 bit (Intel)] on win32
 Type "help", "copyright", "credits" or "license" for more information.
&gt;&gt;&gt;
</code></pre>
<p>------------------- (CTRL + Z to exit the Python prompt)</p>
<p><strong>3.</strong> Get Pip</p>
<p>Save the following script as get-pip.py:</p>
<p><a href="https://bootstrap.pypa.io/get-pip.py" rel="nofollow noreferrer">https://bootstrap.pypa.io/get-pip.py</a>
(if you can not find it, ask me for a copy)</p>
<blockquote>
<p>python get-pip.py</p>
</blockquote>
<p>To check if everything is working, just type pip at the command line:</p>
<blockquote>
<p>pip</p>
</blockquote>
<p>Then, if all goes ok,</p>
<blockquote>
<p>pip install --upgrade setuptools</p>
<p>pip install ez_setup</p>
</blockquote>
<p><strong>4.</strong> Install virtualenv and virtualenvwrapper-powershell</p>
<blockquote>
<p>pip install virtualenv</p>
</blockquote>
<p>(all good)</p>
<blockquote>
<p>pip install virtualenvwrapper-powershell</p>
</blockquote>
<p><strong>(having a problem here)</strong></p>
<pre><code>C:\Django&gt;pip install virtualenvwrapper-powershell

Collecting virtualenvwrapper-powershell

  Using cached virtualenvwrapper-powershell-12.7.8.zip

    Complete output from command python setup.py egg_info:

    Traceback (most recent call last):

      File "&lt;string&gt;", line 1, in &lt;module&gt;

      File "C:\Users\USERHP~1\AppData\Local\Temp\pip-build-9qxnn_l2\virtualenvwrapper-powershell\setup.py", line 76
        TOKEN_READ = 0x00020000L | 0x0008
                               ^
    SyntaxError: invalid syntax

    ----------------------------------------
Command "python setup.py egg_info" failed with error code 1 in
C:\Users\USERHP~1\AppData\Local\Temp\pip-build-9qxnn_l2\virtualenvwrapper-powershell\
</code></pre>
<p>What can I do here?</p>
<p><strong>Thank you for the support</strong></p>
</div>
<div class="post-text" itemprop="text">
<p>virtualenvwrapper-powershell interacts nicely with Python 2.7.
(<a href="https://pypi.python.org/pypi/virtualenvwrapper-powershell/2.7.1" rel="nofollow noreferrer">https://pypi.python.org/pypi/virtualenvwrapper-powershell/2.7.1</a>)</p>
<p>So, I suggest to install that as the system python AND then install Python 3.5.2 outside of the path.</p>
<p>Following steps:</p>
<ol>
<li><p>Install Python 2.7 <strong>ON</strong> the path</p></li>
<li><p>Install Python 3.5.2 <strong>OFF</strong> the path</p></li>
<li><blockquote>
<p>pip</p>
</blockquote></li>
</ol>
<blockquote>
<p>pip install --upgrade setuptools</p>
<p>pip install ez_setup</p>
</blockquote>
<ol start="5">
<li><blockquote>
<p>pip install virtualenv</p>
</blockquote></li>
<li><blockquote>
<p>pip install virtualenvwrapper-powershell</p>
</blockquote></li>
</ol>
</div>
<span class="comment-copy">FYI, that Ctrl+C exits Python's REPL is due to a bug in Windows 8 and 10, in which <code>ReadFile</code> doesn't set the last error to <code>ERROR_OPERATION_ABORTED</code> the way it's supposed to. Python's shell is supposed to default to raising a <code>KeyboardInterrupt</code> exception for Ctrl+C. To exit normally, as intended, type Ctrl+Z and press enter, or to kill Python type Ctrl+Break. This is what will continue to work when you upgrade to Python 3.6, which switched to calling <code>ReadConsole</code>, which works correctly.</span>
<span class="comment-copy">The Windows installer gives you the option to install pip, which you should then upgrade to the latest version via <code>python -m pip install --upgrade pip</code>.</span>
<span class="comment-copy">Python 3 has the <a href="https://docs.python.org/3/library/venv.html" rel="nofollow noreferrer"><code>venv</code></a> module. Give that a try.</span>
<span class="comment-copy">As I say in <a href="http://djangodeployment.com/2016/11/01/virtualenv-demystified/" rel="nofollow noreferrer">djangodeployment.com/2016/11/01/virtualenv-demystified</a>, I have some doubts as to how well virtualenvwrapper is supported on Windows. It may be better to use plain virtualenv.</span>
<span class="comment-copy"><a href="http://meta.stackexchange.com/questions/116101/is-it-ok-to-add-solved-to-the-title-of-a-question" title="is it ok to add solved to the title of a question">meta.stackexchange.com/questions/116101/…</a></span>
